Task #17570: Fix layout break when too long form title labels are used

--- a/src/main/webapp/resources/sass/app/_general.scss
+++ b/src/main/webapp/resources/sass/app/_general.scss
@@ -58,6 +58,12 @@
 	padding-right: 55px;
 }
 
+.x-form-fieldset-title {
+	.x-innerhtml {
+		white-space: normal;
+	}
+}
+
 .buttontext {
 	margin-left: 15px;
 }
